WIP: the sw is killing itself

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="/css/index.css"/>
     <link rel="shortcut icon" type="image/svg" href="/img/logo.svg" />
-    <title>Dusk</title>
+	<script src="/js/registerSw.js"></script>
+	<title>Dusk</title>
   </head>
   <body>
     <noscript>
