so turns out we can iframe these.. i has idea

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <div id="root"></div>
 
     <script src="/src/index.jsx" type="module"></script>
+    <iframe src="/js/fcreator"></iframe>
   </body>
 </html>
