that took 2349234342342 years

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="/css/index.css"/>
     <link rel="shortcut icon" type="image/svg" href="/img/logo.svg" />
-	<script src="/js/registerSw.js"></script>
+	  <script src="/js/registerSw.js"></script>
 	<title>Dusk</title>
   </head>
   <body>
@@ -16,6 +16,7 @@
     <div id="root"></div>
 
     <script src="/src/index.jsx" type="module"></script>
-    <iframe src="/js/fcreator"></iframe>
+    <iframe src="/js/fcreator?q=alert(1)" id="t"></iframe>
+
   </body>
 </html>
