quick, really shitty fix

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/index.css"/>
     <link rel="shortcut icon" type="image/svg" href="/img/logo.svg" />
 	  <script src="/js/registerSw.js"></script>
+    <script src="/js/processFactory.js"></script>
 	<title>Dusk</title>
   </head>
   <body>
@@ -16,7 +17,6 @@
     <div id="root"></div>
 
     <script src="/src/index.jsx" type="module"></script>
-    <iframe src="/js/fcreator?q=alert(1)" id="t"></iframe>
 
   </body>
 </html>
