--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="root"></div>
 
     <script src="/src/index.jsx" type="module"></script>
+    <script src="/js/init.js"></script>
 
   </body>
 </html>
