--- a/public/apps/sh.html
+++ b/public/apps/sh.html
@@ -3,7 +3,13 @@
         <style>
             html, body {
                 background-color: rgb(41, 41, 41);
-                color: rgb(29, 59, 29)
+                color: rgb(85, 174, 85);
+                border: none;
+                margin: 0;
+                padding: 0;
+                font-family: Arial, sans-serif;
+                width: 100%;
+                height: 100%;
             }
         </style>
     </head>
