--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script src="/src/index.jsx" type="module"></script>
     <script src="/js/init.js"></script>
+    <link rel="stylesheet" href="/css/global.css" />
 
   </body>
 </html>
